--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<script></script>
-
     <title>Inicio página de ejercicios</title>
+    <script src="index.js"></script>
 </head>
+
 <body>
-    
+    <h1>Ejercicios de clase para JS</h1>
 </body>
 </html>
